Fixed alignment text and img, also trying a menu

--- a/characterpage.css
+++ b/characterpage.css
@@ -2,6 +2,10 @@
   grid-area: hd;
 } */
 
+#topnav {
+  grid-area: tn;
+}
+
 #area_1 {
   grid-area: s1;
 }
@@ -11,9 +15,6 @@
 }
 
 /* adelina css */
-@import url("https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap");
-/* font-family: Grenze Gotisch; */
-@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 :root {
   /* Color palette */
@@ -36,27 +37,72 @@ body {
 
 h1 {
   font-family: var(--heading-font);
-  font-size: 3vw;
+  font-size: 3.2em;
   color: white;
-  margin-top: 6vw;
-  margin-right: 5vw;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 8vw;
   margin-bottom: 4vw;
 }
 
 h2 {
   font-family: var(--general-font);
-  font-size: 2.5vw;
+  font-size: 1.5em;
   color: white;
+  max-width: 500px;
+  margin: auto;
   margin-top: 1vw;
-  margin-bottom: 0.2vw;
-  margin-right: 5vw;
+  margin-bottom: 1vw;
 }
 
 p {
   font-family: var(--general-font);
   color: white;
-  font-size: 1em;
-  margin-right: 7vw;
+  font-size: 1.2em;
+  max-width: 500px;
+  margin: auto;
+}
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #4caf50;
+  color: white;
 }
 
 .col {
@@ -75,6 +121,7 @@ div[class*="container"] {
 .btn {
   position: relative;
   color: white;
+  font-family: var(--general-font);
   width: 256px;
   height: 64px;
   line-height: 64px;
@@ -152,8 +199,9 @@ div[class*="container"] {
   max-height: 100%;
   display: block;
   object-fit: cover;
-  margin-left: 7rem;
-  margin-top: 5rem;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 8vw;
 }
 
 @media only screen and (min-width: 1001px) {
@@ -162,7 +210,8 @@ div[class*="container"] {
     grid-gap: 0px;
     grid-template-columns: 1fr 1fr;
     grid-template-areas:
-      /* " hd hd " */ " s1 s2 ";
+      " tn tn "
+      " s1 s2 ";
   }
 }
 
@@ -171,7 +220,7 @@ div[class*="container"] {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas:
-      /* " hd " */
+      " tn "
       " s1 "
       " s2 ";
   }
